bk_ida/gccida/g1/build_component_ref
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1608:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1614:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1636:22: error: expected expression
v13 = *( tree_node **)( low + 8); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1636:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( low + 8); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1637:19: error: expected expression
v6 = ( tree_node *)global_trees; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1637:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)global_trees; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1638:26: error: expected expression
if ( v13 == ( tree_node *)global_trees ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/c-typeck.c:1638:15: error: use of undeclared identifier 'tree_node'
if ( v13 == ( tree_node *)global_trees ) 
              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_component_ref/src/obj/c-typeck.o] Error 1
